leftSide title set up not put into index.js yet

--- a/draft/index/index.html
+++ b/draft/index/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <div class="header">
-        <div class="leftSide" style="height:100%">
+        <div id="leftSide" class="leftSide" style="height:100%">
             <div id="title" style="margin:0px auto;">
-                <span>Debugamo : 幫幫迪摩</span>
+                <a class="nav-link" href="">Debugamo : 幫幫迪摩</a>
             </div>
         </div>
         <div id="rightSide" class="rightSide" style="text-align:center;">
