--- a/draft/index/index.html
+++ b/draft/index/index.html
@@ -13,10 +13,11 @@
 </head>
 <body>
     <div class="header">
-        <div id="leftSide" class="leftSide" style="height:100%">
-        </div>
-        <div id="rightSide" class="rightSide" style="text-align:center;">
-            
+        <div id="header">
+            <div id="leftSide" class="leftSide">
+            </div>
+            <div id="rightSide" class="rightSide" style="text-align:center;">
+            </div>
         </div>
     </div>
     <div class="container">
