finish password and email input

--- a/draft/index/index.html
+++ b/draft/index/index.html
@@ -13,10 +13,18 @@
 </head>
 <body>
     <div class="header">
-        <div id="leftSide" class="leftSide" style="height:100%">
+        <div id="leftSide" class="leftSide">
         </div>
         <div id="rightSide" class="rightSide" style="text-align:center;">
-            
+            <div style="margin:4px auto;display: inline-block;width: 850px">
+                <input type="text" id="email" placeholder="Email">
+                <!-- <input type="text" id="password" placeholder="Password"> -->
+                <!-- <input type="text" id="password"> -->
+                <img src="./login.png" alt="">
+                <input type="text" id="password" placeholder="Password">
+                <!-- <button></button> -->
+                <button id="login-summit" type="submit" class="btn btn-primary mb-2">Login</button>
+            </div>
         </div>
     </div>
     <div class="container">
