--- a/draft/index/index.html
+++ b/draft/index/index.html
@@ -16,28 +16,18 @@
         <div id="leftSide" class="leftSide">
         </div>
         <div id="rightSide" class="rightSide" style="text-align:center;display: inline-block">
-            <div style="margin:4px auto;display: inline-block;">
-                <div style="display:inline-block;width: auto;">
-                    <input type="text" id="email" placeholder="Email">
-                    <img id="blockly-input" src="./login.png" alt="">
-                    <input type="text" id="password" placeholder="Password">
-                    <div class="login-button" style="display:inline-block;width: 400px">
-                            <button id="login" type="submit" class="btn btn-primary mb-2">Login</button>
-                            <!-- <div></div> -->
-                            <button id="fast-login-fb" type="submit" class="btn btn-primary mb-2">Facebook 登入</button>
-                            <button id="login-summit-go" type="submit" class="btn btn-primary mb-2">Google登入</button>
-                    </div>
-                </div>
-                <!-- <div class="login-button" style="display:inline-block">
-                    <button id="login" type="submit" class="btn btn-primary mb-2">Login</button>
-                    <button id="fast-login-fb" type="submit" class="btn btn-primary mb-2">Login</button>
-                    <button id="login-summit-go" type="submit" class="btn btn-primary mb-2">Login</button>
-                </div> -->
-            </div>
+            
         </div>
     </div>
-    <div class="container">
-        
+    <div id="container">
+        <div class="row">
+            <div class="column" style="width:60%">
+                right
+            </div>
+            <div class="column" style="width:40%">
+                left
+            </div>
+        </div>
     </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
