--- a/draft/index/index.html
+++ b/draft/index/index.html
@@ -19,21 +19,34 @@
             
         </div>
     </div>
-    <div id="container">
+    <div class="container" style="
+    margin-right: 150px;>
         <div class="row">
-            <div class="column" style="width:60%">
-                right
+            <!-- <div class="col-sm">
+                One of three columns
+            </div> -->
+            <div class="col-sm">
+                <!-- One of three columns -->
             </div>
-            <div class="column" style="width:40%">
-                left
+            <div class="col-sm" id="blockly-block">
+                <!-- One of three columns -->
+                <!-- <img src="./register.png" alt="" style="margin-left:250px;margin-top:50px;"> -->
             </div>
         </div>
     </div>
+    <!-- <div id="test" style="height:50px;background: black"></div> -->
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <script src="./index.js"></script>
+<script src="blockly_compressed.js"></script>
+<script src="blocks_compressed.js"></script>
+<script src="en.js"></script>
+<!-- <script src="./blocks.js"></script> -->
+<script>
+    var workspace = Blockly.inject('blocklyDiv',{toolbox: document.getElementById('toolbox')});
+</script>
 </body>
 <footer>
 
