--- a/draft/index/index.html
+++ b/draft/index/index.html
@@ -16,26 +16,51 @@
         <div id="leftSide" class="leftSide">
         </div>
         <div id="rightSide" class="rightSide" style="text-align:center;display: inline-block">
-            
+            <nav class="nav">
+                <a class="nav-link active">首頁</a>
+                <a class="nav-link" >我的迪摩</a>
+                <a id="log" class="nav-link" href="../login/index.html" >登入</a>
+                <a class="nav-link disabled" >註冊</a>
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"></a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#">Option1</a>
+                    <a class="dropdown-item" href="#">Option3</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">登出</a>
+                </div>
+                </nav>
         </div>
     </div>
-    <div class="container" style="
-    margin-right: 150px;>
-        <div class="row">
-            <!-- <div class="col-sm">
-                One of three columns
-            </div> -->
-            <div class="col-sm">
-                <!-- One of three columns -->
+    <div id="container">
+            <div id="gallery">
+                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" style="height:626px; overflow: hidden;">
+                            <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                <img class="d-block w-100" src="Don't_do_it.jpg" alt="First slide" style="width:50%;height:50%">
+                                <div class="carousel-caption d-none d-md-block">
+                                        <h5>點擊直接開始</h5>
+                                        <p>母湯</p>
+                                </div>
+                              </div>
+                              <div class="carousel-item">
+                                <img class="d-block w-100" src="./Mon.jpeg" alt="Second slide" style="width:50%;height:50%">
+                                <div class="carousel-caption d-none d-md-block">
+                                        <h5>點擊直接開始</h5>
+                                        <p>母湯</p>
+                                </div>
+                              </div>
+                              <div class="carousel-item">
+                                <img class="d-block w-100" src="./Edge.jpg" alt="Third slide" style="width:50%;height:50%">
+                                <div class="carousel-caption d-none d-md-block">
+                                        <h5>點擊直接開始</h5>
+                                        <p>母湯</p>
+                                </div>
+                              </div>
+                            </div>
+                        </div>
             </div>
-            <div class="col-sm" id="blockly-block">
-                <!-- One of three columns -->
-                <!-- <img src="./register.png" alt="" style="margin-left:250px;margin-top:50px;"> -->
-            </div>
-        </div>
     </div>
-    <!-- <div id="test" style="height:50px;background: black"></div> -->
-
+    
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
@@ -49,6 +74,8 @@
 </script>
 </body>
 <footer>
-
+    <div>
+        test
+    </div>
 </footer>
 </html>
