finish login by using background-image

--- a/draft/login/index.html
+++ b/draft/login/index.html
@@ -18,11 +18,13 @@
                 </div>
         </div>
         <div id="rightSide" class="rightSide" style="text-align:center;display: inline-block">
-            <div style="margin:4px auto;display: inline-block;">
-                <div style="display:inline-block;width: auto;">
-                    <input type="text" id="email" placeholder="Email">
-                    <img id="blockly-input" src="./login.png" alt="">
-                    <input type="text" id="password" placeholder="Password">
+            <div style="margin:4px auto;display: inline-block;background-image: url('./login.png');background-repeat: no-repeat;">
+                <div id="right-main" style="display:inline-block;width: auto;">
+                    <div id="input-div">
+                        <input type="text" id="email" placeholder="Email"style="margin-right:23px;width:184px" >
+                        <!-- <img id="blockly-input" src="./login.png" alt=""> -->
+                        <input type="text" id="password" placeholder="Password">
+                    </div>
                     <div class="login-button" style="display:inline-block;width: 400px">
                             <button id="login" type="submit" class="btn btn-primary mb-2">Login</button>
                             <!-- <div></div> -->
