--- a/draft/login/index.html
+++ b/draft/login/index.html
@@ -13,8 +13,8 @@
 <body>
     <div class="header">
         <div id="leftSide" class="leftSide">
-                <div id="title" style="margin:0px auto;">
-                        <a class="nav-link" href="">Debugamo : 幫幫迪摩</a>
+                <div id="title" style="">
+                        <a href="">Debugamo : 幫幫迪摩</a>
                 </div>
         </div>
         <div id="rightSide" class="rightSide" style="text-align:center;display: inline-block">
