--- a/draft/login/index.html
+++ b/draft/login/index.html
@@ -35,6 +35,39 @@
             </div>
         </div>
     </div>
+    <div class="wrapper">
+        <div class="letter">
+            A
+        </div>
+        <div class="letter">
+            <div class="register">
+                <div class="part" style="background-image:url('./register-decomposed/part1.bmp');background-repeat: no-repeat;width: auto;height: 168px;">
+                    <div id="name-div" style="position:relative;top:110px">
+                        <span style="margin-left:30px">姓名</span>
+                        <input type="text" id="re-name" placeholder="姓名" style="margin-left:89px;height:47px;width:176px">
+                    </div>
+                </div>
+                <div class="part" style="background-image:url('./register-decomposed/part2-1.bmp');background-repeat: no-repeat;width: auto;height: 67px">
+                    <!-- part2 -->
+                    <div id="Email-div" style="position:relative;top:9px">
+                        <span style="margin-left:25px">Email</span>
+                        <input type="text" id="re-email" placeholder="信箱" style="margin-left: 82px;width:176px;height: 47px;">
+                    </div>
+                </div>
+                <div class="part" style="background-image:url('./register-decomposed/part2-2.bmp');background-repeat: no-repeat;width: auto;height: 69px">
+                    <!-- part3 -->
+                </div>
+                <div class="part" style="background-image:url('./register-decomposed/part2-3.bmp');background-repeat: no-repeat;width: auto;height: 69px">
+                    <!-- part4 -->
+                </div>
+                <div class="part" style="background-image:url('./register-decomposed/part3.bmp');background-repeat: no-repeat;width: auto;height: 200px;">
+                    <!-- part5 -->
+                </div>
+            </div>
+        </div>
+        
+    </div>
+    
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
