--- a/Project/appengine/debugging/public/debugging.html
+++ b/Project/appengine/debugging/public/debugging.html
@@ -20,6 +20,8 @@
     <script src="/third-party/kjur-jws/jsrsasign-latest-all-min.js"></script>
     <script src="/third-party/kjur-jws/ext/json-sans-eval-min.js"></script>
     <script src="/third-party/kjur-jws/jws-3.2.min.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns"
+    crossorigin="anonymous">
 </head>
 
 <body>
