finish half of ui design, lack of adding event listener on menu bar item and i18n

--- a/Project/appengine/debugging/public/debugging.html
+++ b/Project/appengine/debugging/public/debugging.html
@@ -13,6 +13,7 @@
     <script src="/third-party/jQuery/jquery-3.3.1.min.js"></script>
     <script src="/common/boot.js"></script>
     <script src="/common/storage.js"></script>
+    <script src=""></script>
     <link rel="stylesheet" href="/third-party/uikit/uikit.min.css" />
     <link rel="stylesheet" href="/third-party/normalize/normalize.css" />
     <script src="/third-party/uikit/uikit.min.js"></script>
@@ -22,11 +23,19 @@
     <script src="/third-party/kjur-jws/jws-3.2.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns"
     crossorigin="anonymous">
+
+    <!-- <script src="/closure/goog/base.js"></script>
+    <script src="/debugging/js/NewUI.js"></script> -->
+
 </head>
 
 <body>
     <script src="/third-party/introJS/intro.js"></script>
     <script type="text/javascript" src="/third-party/kibo/kibo.min.js"></script>
 </body>
+<script>
+// newUI.css();
+// newUI.rightbar(goog.dom.getElement('rightBar'));
+</script>
 
 </html>
