--- a/Project/appengine/debugging/public/debugging.html
+++ b/Project/appengine/debugging/public/debugging.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Debugamo : Help DeMo</title>
     <link rel="stylesheet" href="/common/common.css">
-    <link rel="stylesheet" href="debugging/public/style.css">
+    <link rel="stylesheet" href="/debugging/public/style.css">
     <link rel="stylesheet" href="/third-party/introJS/introjs.css">
     <link rel="stylesheet" href="/third-party/introJS/themes/introjs-nazanin.css">
     <script src="/third-party/jQuery/jquery-3.3.1.min.js"></script>
@@ -31,9 +31,5 @@
     <script src="/third-party/introJS/intro.js"></script>
     <script type="text/javascript" src="/third-party/kibo/kibo.min.js"></script>
 </body>
-<script>
-// newUI.css();
-// newUI.rightbar(goog.dom.getElement('rightBar'));
-</script>
 
 </html>
