finish 80% of backTrack

--- a/Project/appengine/debugging/public/debugging.html
+++ b/Project/appengine/debugging/public/debugging.html
@@ -6,6 +6,7 @@
     <meta name="google" value="notranslate">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Debugamo : Help DeMo</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="/common/common.css">
     <link rel="stylesheet" href="/debugging/public/style.css">
     <link rel="stylesheet" href="/third-party/introJS/introjs.css">
@@ -21,9 +22,6 @@
     <script src="/third-party/kjur-jws/jsrsasign-latest-all-min.js"></script>
     <script src="/third-party/kjur-jws/ext/json-sans-eval-min.js"></script>
     <script src="/third-party/kjur-jws/jws-3.2.min.js"></script>
-
-    <!-- <script src="/closure/goog/base.js"></script>
-    <script src="/debugging/js/NewUI.js"></script> -->
 
 </head>
 
