--- a/Project/appengine/debugging/public/debugging.html
+++ b/Project/appengine/debugging/public/debugging.html
@@ -17,6 +17,7 @@
     <script src=""></script>
     <link rel="stylesheet" href="/third-party/uikit/uikit.min.css" />
     <link rel="stylesheet" href="/third-party/normalize/normalize.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="/third-party/uikit/uikit.min.js"></script>
     <script src="/third-party/uikit/uikit-icons.min.js"></script>
     <script src="/third-party/kjur-jws/jsrsasign-latest-all-min.js"></script>
@@ -27,6 +28,8 @@
 
 <body>
     <script src="/third-party/introJS/intro.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script type="text/javascript" src="/third-party/kibo/kibo.min.js"></script>
 </body>
 
